fix: move horizontal scroll to child pages

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -6,6 +6,10 @@
 
 @include mat.core();
 
+.body {
+  overflow-x: hidden;
+}
+
 .toolbar {
   @media #{$breakpoint-small} {
     margin: 20px;
@@ -23,7 +27,7 @@
 
 .content {
     width: -webkit-fill-available;;
-  
+
     @media #{$breakpoint-small} {
       margin: 20px;
     }
@@ -61,7 +65,7 @@
     background: mat.get-color-from-palette($fem-readup-red-primary, 50);
     padding: 20px;
     color: gray;
-  
+
   }
   .mat-expansion-panel {
     background: mat.get-color-from-palette($fem-readup-red-primary, 50);
@@ -79,7 +83,7 @@
       color: grey;
     }
   }
-  
+
 }
 
 .lazyloaded {
