--- a/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
+++ b/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
@@ -8,7 +8,7 @@
 .mat-card {
   @media #{$breakpoint-small} {
     box-shadow: unset !important;
-    margin-bottom: 64px;
+    margin-bottom: 4px;
   }
   @media #{$breakpoint-medium} {
   }
