--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,6 @@ body {
 
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
 }
 
 ::ng-deep .mat-toolbar-single-row {
